[package]
name = "zero2prod"
version = "0.1.0"
authors = [ "Victor Zambrano <donvito4571@gmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4.0.0-beta.20", default-features = false }

[dev-dependencies]
reqwest = "0.11"
